[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.12.2"
rcgen = { version = "0.13.2", features = [
  "crypto",
  "x509-parser",
  "aws_lc_rs",
] }
time = { version = "0.3.44", features = ["macros", "local-offset"] }
rustls-pki-types = "1.13.0"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.4"

[dependencies.tokio]
version = "1.48.0"
features = ["rt", "rt-multi-thread", "io-util", "time", "net", "macros"]
